--- a/TEMP.html
+++ b/TEMP.html
@@ -1,3 +1,13 @@
+task name
+related {projects: {}, skills:{}, goals: {}},
+status (completed, active, inactive, deferred,)
+document
+due date
+date created
+tags
+
+---
+
 	$urlRouterProvider.otherwise('/state');
 
 		$stateProvider
