--- a/public/index.html
+++ b/public/index.html
@@ -32,10 +32,14 @@
 	<script src="js/controllers/skills.js"></script>
 	<script src="js/controllers/projects.js"></script>
 	<script src="js/controllers/goals.js"></script>
+	<script src="js/controllers/tasks.js"></script>
 	
+
 	<script src="js/services/skill.js"></script>
 	<script src="js/services/project.js"></script>
 	<script src="js/services/goal.js"></script>
+	<script src="js/services/task.js"></script>
+
 	<script src="js/core.js"></script>
 
 	<script>
@@ -43,7 +47,7 @@
 	</script>
 </head>
 <body> 
-	<a href="/">Home</a> | <a href="#/skills">Skills</a> | <a href="#/projects">Projects</a> | <a href="#/goals">Goals</a> | <a href="#/works">Works in Progress/Wishlists</a>|<a href="#/resources">Resources</a> | <a href="#/social">Get Social!</a>
+	<a href="/">Home</a> | <a href="#/skills">Skills</a> | <a href="#/projects">Projects</a> |<a href="#/tasks">Tasks</a>| <a href="#/goals">Goals</a> | <a href="#/works">Works in Progress/Wishlists</a>|<a href="#/resources">Resources</a> | <a href="#/social">Get Social!</a>
 
 	<div ng-view="">
 	</div>
@@ -70,10 +74,15 @@ angular.module('configuration',[])
 			{
 				templateUrl: 'partials/goalsView.html'
 			})
+			.when('/tasks',
+			{
+				templateUrl: 'partials/tasksView.html'
+			})
 			.when('/works',
 			{
 				templateUrl: 'partials/worksView.html'
 			})
+
 		});
 </script>
 
