--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,16 @@
 		.td-entry {
 			padding: 2px;
 		}
+		thead, tbody {
+			display: block;
+		}
+
+		tbody {
+			height: 300px;
+			overflow-y: auto;
+			overflow-x: hidden;
+		}
+
 		.output {
 			vertical-align: bottom;
 		}
@@ -135,12 +145,29 @@
 	<script src="js/core.js"></script>
 
 	<script>
-	
+	$(document).ready(function(){
+		$(window).click(function() {
+				var $table = $('#tbl'),
+		    $bodyCells = $table.find('tbody tr:first').children(), colWidth;
+		   
+		    // Get the tbody columns width array
+		    colWidth = $bodyCells.map(function() {
+		        return $(this).width();
+		    }).get();
+		    
+		    // Set the width of thead columns
+		    $table.find('thead tr').children().each(function(i, v) {
+		        $(v).width(colWidth[i]);
+		    });
+		});
+	});
 	</script>
 </head>
 <body> 
 
-	<a href="/">Home</a> | <a href="#/skills">Skills</a> | <a href="#/projects">Projects</a> |<a href="#/tasks">Tasks</a>| <a href="#/goals">Goals</a> | <a href="#/works">Works in Progress/Wishlists</a>|<a href="#/resources">Resources</a> | <a href="#/social">Get Social!</a>	
+	<a href="/">Home</a> | <a href="#/skills">Skills</a> 
+	<!--
+	WORKS IN PROGRESS| <a href="#/projects">Projects</a> |<a href="#/tasks">Tasks</a>| <a href="#/goals">Goals</a> | <a href="#/works">Works in Progress/Wishlists</a>|<a href="#/resources">Resources</a> | <a href="#/social">Get Social!</a>	-->
 
 	<div ng-view="">
 	</div>
