--- a/public/index.html
+++ b/public/index.html
@@ -4,126 +4,10 @@
 <head>
 	<meta charset="utf-8">
 	<title>Real Life Avatar</title>
-	<style>
-/*		html 					{ overflow-y:scroll; }
-		body 					{ padding-top:50px; }
-		.box {width: 75px;}
-		#myTable, td, tr,th {border: 1px solid black;}
-		#myTable td,th {padding: 5px;}
-		.output {
-		display: inline-block;
-		border: 1px solid black;
-		padding: 10px;
-		width: 100px;
-		}*/
-
-		.footer {
-			margin-top: 50px;
-		}
-		/* TASKS VIEW */
-		table{
-		    border: 1px solid gray;
-		    table-layout: fixed;
-		    border-collapse: collapse;
-		}
-
-		th, td {
-		    border: 1px solid lightgray;
-		    overflow: hidden;
-		    vertical-align: bottom;
-		}
-		td div {
-			vertical-align: bottom;
-		}
 	
-		th {
-			background-color: #D8D8D8;
-			border: 1px solid #C0C0C0;
-		}
-		.td-entry {
-			padding: 2px;
-		}
-		thead, tbody {
-			display: block;
-		}
-
-		tbody {
-			height: 300px;
-			overflow-y: auto;
-			overflow-x: hidden;
-		}
-
-		.output {
-			vertical-align: bottom;
-		}
-
-		.col-name {
-			width: 150px;
-		}
-
-		
-		.update-btn {
-			display: none;
-		}
-		
-		.entry {
-			display: none;
-		}
-		.entry-on {
-			width: 65px;
-		}
-		
-		.cats {
-			display: inline-block;
-		}
-		.box {
-			width: 80px;
-		}
-		.container {
-			margin: 0px;
-		}
-
-		span {
-			font-size: 10px;
-			text-align: right;
-		}
-		/* DOCUMENT WINDOW */
-
-		.doc-window {
-			border: 1px solid black;
-			padding: 5px;
-			margin: 5px;
-			width: 500px;
-			height: 225px;
-		}
-		
-		.doc-entry {
-			width: 325px;
-			display: inline-block;
-		}
-			.doc-text {
-				width: 325px;
-				height: 180px;
-			}
-
-		.doc-info {
-			width: 150px;
-			display: inline-block;
-			vertical-align: top;
-		}
-			.doc-info-head {
-				font-weight: bold;
-			}
-			.doc-info table {
-				width: 150px;
-			}
-		
-		
-		
-	</style>
-
-	<link rel="stylesheet" type="text/css" href="js/assets/jquery-ui.css">
-	<link rel="stylesheet" type="text/css" href="js/assets/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/avatar.css">
+	<link rel="stylesheet" type="text/css" href="css/assets/jquery-ui.css">
+	<link rel="stylesheet" type="text/css" href="css/assets/bootstrap.css">
 
 	<script src="js/assets/jquery.js"></script>
 	<script src="js/assets/jquery-ui.js"></script>
@@ -175,7 +59,6 @@
 	<div class='footer'>
 		Created By Dean Hin http://www.deanhin.net
 	</div>
-	
 </body>
 <script>
 angular.module('configuration',[])
@@ -209,7 +92,6 @@ angular.module('configuration',[])
 			{
 				templateUrl: 'partials/tourView.html'
 			})
-
 		});
 </script>
 
