--- a/TEMP.html
+++ b/TEMP.html
@@ -1,3 +1,14 @@
+	<table class='new'>
+			<thead>
+				<th ng-repeat="(key,value) in skills">{{key}}</th>
+			</thead>
+			<tbody>
+				<tr>
+					<td></td>
+				</tr>
+			</tbody>
+		</table>
+
 <div class='doc-table'>
 				<table>
 						<tr>
